# currency-converter

./: .gitingnore  LICENSE  PKGBUILD  README.md  __init__.py  aphrodite.py  aur-package  bsoup.py  currency.py  dionysus.py  dionysus_answer.py  main.py  poseidon.py  pyproject.toml  regular_expressions.py
currency-converter/: __init__.py  currency.py  main.py
src/: aur-package
src/currency-converter/: currency.spec  main.py
src/currency-converter_wolf_skullcave/: __init__.py  currency.py  main.py
src/currency_converter/: __about__.py  __init__.py  currency.py  main.py
