[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "currency-converter"
dynamic = ["version"]
description = 'Converts dollars(USD) to rands(ZAR)'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "wolf_skullcave", email = "67805222+wolfSkullCave@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/wolf_skullcave/currency-converter#readme"
Issues = "https://github.com/wolf_skullcave/currency-converter/issues"
Source = "https://github.com/wolf_skullcave/currency-converter"

[tool.hatch.version]
#path = "src/currency_converter/__init__.py"
version = {source = "vcs"}

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/currency_converter tests}"

[tool.coverage.run]
source_pkgs = ["currency_converter", "tests"]
branch = true
parallel = true
omit = [
  "src/currency_converter/__about__.py",
]

[tool.coverage.paths]
currency_converter = ["src/currency_converter", "*/currency-converter/src/currency_converter"]
tests = ["tests", "*/currency-converter/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
