[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "currency"
authors = [{name = "wolf_skullcave", email = "pypi.rewrap869@aleeas.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]
description = "Converts USD to ZAR"

[project.urls]
Home = "https://github.com/wolfSkullCave/currency-converter"

[tool]
